# GROmEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.txt  changelog.md  readme.md  todo.md
Core/: AppInfo.h  Args.cpp  Args.h  BitmapData.cpp  BitmapData.h  Blob.cpp  Blob.h  CMakeLists.txt  Config.cpp  Config.h  Core.cpp  Core.h  Crypt.cpp  Crypt.h  DataWriter.cpp  DataWriter.h  FastMem.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  HashMap.h  MemReader.cpp  MemReader.h  Memory.cpp  Memory.h  Name.cpp  Name.h  Net.cpp  Net.h  PackArch.cpp  PackArch.h  Package.cpp  Package.h  ParseFile.cpp  ParseFile.h  Parser.cpp  Parser.h  ParserUtils.cpp  ParserUtils.h  (+14 more)
Core/buffer/: StringWriter.cpp  StringWriter.h
Core/debug/: LogFile.cpp  LogFile.h  LogStdOut.cpp  LogStdOut.h
Core/memory/: FastAllocatedObject.cpp  FastAllocatedObject.h  FastMemManager.cpp  FastMemManager.h  FastMemTest.cpp  FastMemTest.h  MemoryPool.cpp  MemoryPool.h  ObjectsPool.cpp  ObjectsPool.h
Core/serialization/: BinaryState.cpp  BinaryState.h  BinaryVar.cpp  BinaryVar.h  Serializable.cpp  Serializable.h  SerializableFile.cpp  SerializableFile.h  SerializableGroup.cpp  SerializableGroup.h  SerializeUtils.cpp  SerializeUtils.h
Core/time/: Time.cpp  Time.h
Core/undo/: UndoBatch.cpp  UndoBatch.h  UndoMapInsert.h  UndoPropertyChange.h  UndoRedoOperation.h  UndoService.cpp  UndoService.h  UndoVarChange.h  UndoVarPrevChange.h  UndoVectorAdd.h  UndoVectorInsert.h  UndoVectorRemove.cpp  UndoVectorRemove.h  UndoVectorRemoveAt.h  UndoVectorSet.h
Core_unit/: CMakeLists.txt  CryptTest.cpp  UnitCommon.h  main.cpp
Core_unit/args/: ArgsTest.cpp
Core_unit/memory/: FastMem.cpp  FastMemPoolIndex.cpp
Core_unit/parser/: ParserUtils.cpp
Core_unit/undo/: UndoTest.cpp
Engine/: Anim.cpp  Anim.h  CMakeLists.txt  Console.cpp  Console.h  EngineContext.cpp  EngineContext.h  EngineInfo.h  Font.cpp  Font.h  GameApp.cpp  GameApp.h  Input.cpp  Input.h  KeyCodes.h  ParserTools.cpp  ParserTools.h  Platform.h  RenAux.cpp  RenAux.h  RenDevice.h  RenManager.cpp  RenManager.h  ResourceMap.cpp  ResourceMap.h  SndManager.cpp  SndManager.h  TexFrames.cpp  TexFrames.h  TimeFormat.cpp  TimeFormat.h  UserInput.h  engine.cpp  engine.h
Engine/assets/: VisualAssetsContext.cpp  VisualAssetsContext.h
Engine/console/: Console.cpp  Console.h  StringBuffer.cpp  StringBuffer.h  TextBuffer.cpp  TextBuffer.h
Engine/debug/: DebugDrawManager.cpp  DebugDrawManager.h  DebugDrawPolicy.cpp  DebugDrawPolicy.h
Engine/display/: Sprite.h  VisualContainer2d.cpp  VisualContainer2d.h  VisualContext2d.cpp  VisualContext2d.h  VisualObject2d.cpp  VisualObject2d.h  VisualSceneRender2d.cpp  VisualSceneRender2d.h  VisualType.h
Engine/input/: ISoftInput.h  InteractiveElement.cpp  InteractiveElement.h  MultiUserInput.cpp  MultiUserInput.h  SoftInputEmpty.cpp  SoftInputEmpty.h  SoftKeyboard.cpp  SoftKeyboard.h
Engine/renderer/: QuadsBuffer.cpp  QuadsBuffer.h  TileDef.cpp  TileDef.h
Engine/test/: BaseFunctional3dTest.cpp  BaseFunctional3dTest.h  BaseFunctionalTest.cpp  BaseFunctionalTest.h  BaseTestApp.cpp  BaseTestApp.h
Engine/timing/: FixedUpdate.cpp  FixedUpdate.h
Engine/utils/: AppUtils.cpp  AppUtils.h  DebugDrawInfo.cpp  DebugDrawInfo.h
ImageDecoder/: BitmapLoader.cpp  BitmapLoader.h  CMakeLists.txt  IImageFormatDecoder.cpp  IImageFormatDecoder.h  ImagesDecoder.cpp  ImagesDecoder.h  JPGDecoder.cpp  JPGDecoder.h  PNGDecoder.cpp  PNGDecoder.h
ImageDecoder/jpeg/: CMakeLists.txt
ImageDecoder/png/: CMakeLists.txt
ImageDecoder/zlib/: CMakeLists.txt
Networking/: CMakeLists.txt  ClientSocket.cpp  Net.cpp  Net.h  NetPosix.cpp  NetWindows.cpp  Packet.cpp  Packet.h  SocketServer.cpp  SocketServer.h
Networking/client/: Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h
Networking/common/: BaseClientSocket.cpp  BaseClientSocket.h  PacketsHandlingManager.cpp  PacketsHandlingManager.h  PacketsPool.cpp  PacketsPool.h
Networking/serialization/: BinaryState.cpp  BinaryState.h  BinaryVar.h
Networking/server/: ClientConnection.cpp  ClientConnection.h  Server.cpp  Server.h  SocketServer.cpp  SocketServer.h
Platform/AndroidPlatform/: AndroidAssetReader.cpp  AndroidAssetReader.h  AndroidCommon.h  AndroidImagesDecoder.cpp  AndroidImagesDecoder.h  AndroidKeyCodes.h  AndroidKeyboard.cpp  AndroidKeyboard.h  AndroidLogPolicy.cpp  AndroidLogPolicy.h  AndroidPlatform.cpp  AndroidPlatform.h  CMakeLists.txt  GLNativeContext.cpp  GLNativeContext.h  JavaObject.cpp  JavaObject.h
Platform/Desktop/: CMakeLists.txt  DesktopCommon.h  DesktopKeyCodes.h  DesktopKeyNames.cpp  DesktopKeyNames.h  DesktopMain.cpp  DesktopPlatform.cpp  DesktopPlatform.h
RasterGL/: CMakeLists.txt  GLBaseTexture.h  GLCommon.h  GLDebug.h  GLDisplayModes.cpp  GLLightManager.cpp  GLLightManager.h  GLRenderDevice.cpp  GLRenderDevice.h  GLTexture.cpp  GLTexture.h  GLTexturesCache.cpp  GLTexturesCache.h  GLUtils.cpp  GLVertexBuffer.cpp  GLVertexBuffer.h
RasterGL/shaders/: GLShader.cpp  (+1 more)
RasterGLES3/: CMakeLists.txt  GLBaseTexture.cpp  GLCommon.h  GLDebug.cpp  GLDebug.h  GLDisplayModes.cpp  GLDisplayModes.h  GLLightManager.cpp  GLRenderDevice.cpp  GLRenderDevice.h  GLTexture.cpp  GLTexture.h  GLTexturesCache.cpp  GLTexturesCache.h  GLUtils.cpp  GLUtils.h  GLVertexBuffer.cpp  GLVertexBuffer.h  todo.md
SoundOAL/: ALCommon.h  ALSound.cpp  ALSound.h  ALTrack.cpp  ALTrack.h  ALTrackMgr.cpp  ALTrackMgr.h  CMakeLists.txt  OALDevice.cpp  OALDevice.h  OALUtils.cpp  OALUtils.h  SoundManager.cpp  SoundManager.h  SourceManager.cpp  SourceManager.h
TestsApp/: AppInit.cpp  CMakeLists.txt  SoundTest.cpp  SoundTest.h  TestCommon.h  TestGameApp.cpp  TestGameApp.h
nsLib/: BBox2.h  CMakeLists.txt  CycleList.h  EditString.cpp  EditString.h  FilePath.cpp  FilePath.h  Line2.cpp  Line2.h  Lock.cpp  Lock.h  MathTools.cpp  MathTools.h  StrTools.cpp  StrTools.h  SubSystem.h  Triangulate2.cpp  Triangulate2.h  Utils.h  Vec2.cpp  Vec2.h  Vec3.h  color.cpp  color.h  comm_types.h  headers.h  log.cpp  log.h  matrix4.cpp  matrix4.h  mymath.h  nsLib.h
nsLib_unit/: CMakeLists.txt  UnitCommon.h  main.cpp
(+579 files in other folders)
