cmake_minimum_required(VERSION 3.10)
project(Engine)

set(CMAKE_CXX_STANDARD 17)
file(GLOB sources
        "*.cpp"
        "test/*.cpp"
        "input/*.cpp"
        renderer/QuadsBuffer.cpp
        renderer/sprites/Sprite9Grid.cpp
        renderer/sprites/SpriteDesc.cpp
        renderer/sprites/SpriteDesc.h
        renderer/TileDef.cpp
        input/MultiUserInput.cpp
        input/InteractiveElement.cpp
        test/BaseFunctionalTest.h
        test/BaseFunctionalTest.cpp
)

set(src
        display/text/TextLabel.cpp
        display/VisualContainer2d.cpp
        display/VisualObject2d.cpp
        display/VisualContext2d.cpp
        display/VisualContext2d.h
        display/layouts/BaseLayout.cpp
        display/layouts/BaseLayout.h
        display/VisualSceneRender2d.cpp
        display/VisualSceneRender2d.h
        display/layouts/LayoutUpdater.cpp
        display/layouts/LayoutUpdater.h
        display/layouts/GroupLayout.cpp
        display/layouts/GroupLayout.h
        display/anchors/LayoutAnchor.cpp
        display/anchors/LayoutAnchor.h
        display/Sprite.cpp
        display/Sprite.h
        display/layouts/VGroupLayout.cpp
        display/layouts/VGroupLayout.h
        display/align/Align.cpp
        display/align/Align.h
        display/layouts/HGroupLayout.cpp
        display/layouts/HGroupLayout.h
        display/text/TextArea.cpp
        display/text/TextArea.h
        display/popup/PopupManager.cpp
        display/popup/PopupManager.h
        display/button/TextButton.cpp
        display/popup/BasePopup.cpp
        display/popup/BasePopup.h
        display/popup/MessagePopup.cpp
        display/popup/MessagePopup.h
        input/SoftKeyboard.cpp
        input/SoftKeyboard.h
        display/button/BaseButton.cpp
        display/button/BaseButton.h
        display/button/IconButton.cpp
        display/button/IconButton.h
        input/soft/SoftKeyButtons.cpp
        input/soft/SoftKeyButtons.h
        EngineContext.cpp
        EngineContext.h
        input/soft/SoftInputKeyboard.cpp
        input/soft/SoftInputKeyboard.h
        display/context/VisualMaskManager.cpp
        display/context/VisualMaskManager.h
        renderer/sprites/Sprite9SliceDesc.cpp
        renderer/sprites/Sprite9SliceDesc.h
        display/sprite/Sprite9Slice.cpp
        display/sprite/Sprite9Slice.h
        display/layouts/scroll/ScrollBar.cpp
        display/layouts/scroll/ScrollBar.h
        display/layouts/scroll/ScrollThumb.cpp
        display/layouts/scroll/ScrollThumb.h
        renderer/particles/ParticleSystem.cpp
        renderer/particles/ParticleSystem.h
        renderer/particles/spawner/ParticlesSpawner.cpp
        renderer/particles/spawner/ParticlesSpawner.h
        renderer/particles/Particle.cpp
        renderer/particles/Particle.h
        renderer/particles/spawner/position/ParticlesCircleSpawner.cpp
        renderer/particles/spawner/position/ParticlesCircleSpawner.h
        renderer/particles/renderer/ParticlesRenderer.cpp
        renderer/particles/renderer/ParticlesRenderer.h
        renderer/particles/renderer/RoundParticlesRenderer.cpp
        renderer/particles/renderer/RoundParticlesRenderer.h
        renderer/particles/spawner/ParticlesSizeSpawner.cpp
        renderer/particles/spawner/ParticlesSizeSpawner.h
        renderer/particles/spawner/ParticlesMultiSpawner.cpp
        renderer/particles/spawner/ParticlesMultiSpawner.h
        renderer/particles/spawner/ParticlesLifeSpawner.cpp
        renderer/particles/spawner/ParticlesLifeSpawner.h
        renderer/particles/updater/ParticlesUpdater.cpp
        renderer/particles/updater/ParticlesUpdater.h
        renderer/particles/updater/ParticlesMultiUpdater.cpp
        renderer/particles/updater/ParticlesMultiUpdater.h
        renderer/particles/updater/ParticlesSizeUpdater.cpp
        renderer/particles/updater/ParticlesSizeUpdater.h
        renderer/particles/spawner/ParticlesAngleSpawner.cpp
        renderer/particles/spawner/ParticlesAngleSpawner.h
        renderer/particles/spawner/velocity/ParticlesRadialVelocitySpawner.cpp
        renderer/particles/spawner/velocity/ParticlesRadialVelocitySpawner.h
        renderer/particles/spawner/position/ParticlesPolygonSpawner.cpp
        renderer/particles/spawner/position/ParticlesPolygonSpawner.h
        utils/AppUtils.cpp
        utils/AppUtils.h
        renderer/particles/spawner/velocity/ParticlesVectorVelSpawner.cpp
        renderer/particles/spawner/velocity/ParticlesVectorVelSpawner.h
        renderer/particles/updater/ParticlesGravityUpdater.cpp
        renderer/particles/updater/ParticlesGravityUpdater.h
        renderer/particles/ParticlesBehaviour.cpp
        renderer/particles/ParticlesBehaviour.h
        renderer/particles/spawner/factory/ParticlesSpawnerFactory.cpp
        renderer/particles/spawner/factory/ParticlesSpawnerFactory.h
        renderer/particles/spawner/factory/ParticlesSpawnerContext.cpp
        renderer/particles/spawner/factory/ParticlesSpawnerContext.h
        renderer/particles/spawner/factory/ParticlesSpawnerContext.h
        renderer/particles/ParticlesManager.cpp
        renderer/particles/ParticlesManager.h
        renderer/particles/renderer/ParticlesRendererFactory.cpp
        renderer/particles/renderer/ParticlesRendererFactory.h
        renderer/particles/updater/factory/ParticlesUpdaterFactory.cpp
        renderer/particles/updater/factory/ParticlesUpdaterFactory.h
        renderer/particles/updater/factory/ParticlesUpdaterContext.cpp
        renderer/particles/updater/factory/ParticlesUpdaterContext.h
        renderer/particles/spawner/position/ParticlesEdgesSpawner.cpp
        renderer/particles/spawner/position/ParticlesEdgesSpawner.h
        renderer/particles/spawner/velocity/ParticlesRightVelSpawner.cpp
        renderer/particles/spawner/velocity/ParticlesRightVelSpawner.h
        renderer/particles/ParticlesPool.cpp
        renderer/particles/ParticlesPool.h
        renderer/particles/updater/ParticlesVelocityApplyUpdater.cpp
        renderer/particles/updater/ParticlesVelocityApplyUpdater.h
        renderer/particles/renderer/ParticlesToonRenderer.cpp
        renderer/particles/renderer/ParticlesToonRenderer.h
        renderer/particles/updater/ParticlesTimelineUpdater.cpp
        renderer/particles/updater/ParticlesTimelineUpdater.h
        renderer/particles/updater/size/ParticlesSizeTimelineUpdater.cpp
        renderer/particles/updater/size/ParticlesSizeTimelineUpdater.h
        renderer/particles/updater/ParticlesVelToAngleUpdater.cpp
        renderer/particles/updater/ParticlesVelToAngleUpdater.h
        renderer/particles/updater/ParticlesColorTimelineUpdater.cpp
        renderer/particles/updater/ParticlesColorTimelineUpdater.h
        renderer/font/FontsCache.cpp
        renderer/font/FontsCache.h
        display/factory/VisualCreationContext.h
        display/factory/VisualFactory2d.cpp
        display/factory/VisualFactory2d.h
        display/factory/VisualBuilder2d.h
        display/sprite/SpriteBuilder.cpp
        display/sprite/SpriteBuilder.h
        display/factory/VisualBuilder2d.cpp
        display/text/TextLabelBuilder.cpp
        display/text/TextLabelBuilder.h
        display/container/VisualContainerBuilder.cpp
        display/container/VisualContainerBuilder.h
        display/factory/LayoutRefBuilder.cpp
        display/factory/LayoutRefBuilder.h
)

include_directories(./)

add_library(Engine STATIC ${sources} ${src})
target_include_directories(Engine PUBLIC ../Platform)